--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,6 +21,16 @@
 			</nav>
 
 			<section class="main" id="s1">
+				<% if (errors.length){ %>
+					<span id='ErrorMsgs'>
+						Corregir Errores:<br/>
+						<% for (var i in errors){ %>
+							<span> <%= errors[i].message %>
+							</span><br/>
+						<% } %>
+					</span>
+				<% } %>
+				
 				<div>
 					<%- body %>
 				</div>
