--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,17 @@
 	<body>
 		<div id="page-wrap">
 			<header class="main" id="h1">
+				<% if (!session.user){%>
+					<span class="right">
+						<a href="/login">Login</a>
+					</span>
+				<%} else {%>
+					<span class="right">
+						<%= session.user.username %>
+						<a href="/logout">Logout</a>
+					</span>
+				<%}%>
+
 				<h2>Quiz <span>: El Juego de las Preguntas</span></h2>
 			</header>
 		
