--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,6 +1,8 @@
 <form id="formBuscar" method="get" action="/quizes/busqueda">
-<input type="text" name="search" placeholder="Texto a buscar">
-<input type="submit" value="Buscar">
+	<% if(session.user){%>
+		<input type="text" name="search" placeholder="Texto a buscar">
+		<input type="submit" value="Buscar">
+	<%}%>
 </form>
 <br/>
 <hr/>
@@ -10,24 +12,29 @@
 	<tr>
 		<td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
 
-		<td>
-			<% if (quizes[i].tema){ %>
-				<%= quizes[i].tema %>
-				<%} %>
-		</td>
+		<% if(session.user){%>
+			<td>
+				<% if (quizes[i].tema){ %>
+					<%= quizes[i].tema %>
+					<%} %>
+			</td>
 
-		<td><a href="quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a></td>
+			<td><a href="quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a></td>
 
-		<td>
-			<form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
-				<button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
-					Borrar
-				</button>
-			</form>
-		</td>
+			<td>
+				<form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
+					<button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
+						Borrar
+					</button>
+				</form>
+			</td>
+		<%}%>
+
 	</tr>
 <% } %>
 </table>
 <p/>
 
-<a href="/quizes/new"><button type="button">Crear Pregunta</button></a>
+<% if(session.user){%>
+	<a href="/quizes/new"><button type="button">Crear Pregunta</button></a>
+<%}%>
